--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "expo": "16.0.0",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
+    "react-navigation": "^1.0.0-beta.9",
+    "tcomb-form-native": "^0.6.8"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1"
