Fixed eslint config

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "tcomb-form-native": "^0.6.8"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1"
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react-native": "^2.3.2"
   }
 }
