--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.9",
+    "rxjs": "^5.3.1",
     "tcomb-form-native": "^0.6.8"
   },
   "devDependencies": {
