--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "parser": "babel-eslint",
     "parserOptions": {
@@ -26,6 +27,10 @@
     },
     "plugins": [
         "react",
-        "react-native"
+        "react-native",
+        "jest"
+    ],
+    "extends": [
+        "plugin:jest/recommended"
     ]
 }
