--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
+    "eslint-plugin-jest": "^20.0.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-react-native": "^2.3.2",
     "jest": "^20.0.0"
