--- a/sms-server/package.json
+++ b/sms-server/package.json
@@ -8,11 +8,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.46.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "express-ws": "^3.0.0"
+    "ws": "^2.3.1"
   }
 }
